<resources>
    <string name="app_name" translatable="false">Cookbook</string>
    <string name="action_settings">Settings</string>
    <string name="contentdesc_delete_category">Delete category</string>
    <string name="contentdesc_edit_category">Edit category</string>
    <string name="title_activity_create_recipe">Create Recipe</string>
    <string name="recipe_name_hint">Recipe name</string>
    <string name="recipe_category">Category</string>
    <string name="recipe_ingredients">Ingredients</string>
    <string name="contentdesc_add_ingredient">Add ingredient button</string>
    <string name="contentdesc_remove_ingredient">Remove ingredient button</string>
    <string name="recipe_instructions">Instructions</string>
    <string name="action_save">Save</string>
    <string name="action_cancel">Cancel</string>
    <string name="create_recipe_cancel">Discard changes?</string>
    <string name="yes">Yes</string>
    <string name="recipe_no_category">No category</string>
    <string name="title_activity_view_recipe">View Recipe</string>
    <string name="action_edit_recipe">Edit recipe</string>
    <string name="action_delete_recipe">Delete recipe</string>
    <string name="cancel">Cancel</string>
    <string name="alert_delete_recipe">Delete recipe?</string>
    <string name="alert_recipe_saved">Recipe saved!</string>
    <string name="title_activity_edit_recipe">Edit Recipe</string>
    <string name="alert_sort_recipes">Sort recipes by:</string>
    <string name="action_sort">Sort</string>
    <string name="title_sorted_by_name">Sorted by name</string>
    <string name="title_sorted_by_category">Sorted by category</string>
    <string name="title_activity_edit_categories">Categories</string>
    <string name="action_categories">Categories</string>
    <string name="title_activity_edit_category">"Editing category: "</string>
    <string name="category_name_hint">Category name</string>
    <string name="alert_delete_category">Delete category?</string>
    <string name="alert_blank_recipe_name">Recipe name can\'t be blank!</string>
    <string name="alert_blank_category_name">Category name can\'t be blank!</string>
    <string name="action_delete">Delete</string>
    <string name="title_create_category">Create category</string>
    <string name="category_name_duplicate">There\'s already a category with that name!</string>
    <string name="alert_category_saved">Category saved!</string>
    <string name="alert_category_deleted">Category deleted!</string>
    <string name="alert_recipe_deleted">Recipe deleted!</string>
    <string name="title_no_categories">No categories found. Tap the plus button to add one!</string>
    <string name="title_no_recipes">No recipes found. Tap the plus button to add one!</string>
    <string name="search_hint">Search</string>
    <string name="action_edit_category">Edit category</string>
    <string name="title_edit_category">Edit category</string>
    <string name="title_activity_about">About</string>
    <string name="action_license">Open source licenses</string>
    <string name="text_about_app">A simple open source Cookbook app.</string>
    <string name="text_about_url" translatable="false">https://github.com/JNuutinen/Cookbook</string>
    <string name="action_about">About</string>
    <string name="action_cookbook_license">License</string>
    <string name="action_share">Share recipe</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->

    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->

    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <!-- Example settings for Notifications -->

    <string name="title_editing_category">Editing category \'%1$s\'</string>
    <string name="title_deleting_category">Delete category \'%1$s\'?</string>
    <string name="title_version_number">Version %1$s</string>
    <string name="title_introduction_example_recipes">Example recipes</string>
    <string name="title_introduction_example_categories">Example categories</string>
    <string name="option_introduction_recipes">Generate example recipes</string>
    <string name="option_introduction_categories">Generate example categories</string>
    <string name="recipe_name_duplicate">There\'s already a recipe with that name!</string>
    <string name="alert_delete_ingredient">This will delete the lowest ingredient row. If you want to delete some other ingredient without deleting the lowest, just leave the field blank, and it will not be added to the recipe.</string>
    <string name="title_dont_show_dialog">Don\'t show this dialog in the future</string>
    <string name="title_delete_ingredient">Delete ingredient</string>
    <string name="title_activity_recipes_by_category" translatable="false">RecipesByCategoryActivity</string>
    <string name="title_no_recipes_in_category">There are no recipes in this category.</string>
    <string name="title_no_favorites">You haven\'t added any recipes to Favorites.</string>
    <string name="tab_text_1">Recipes</string>
    <string name="tab_text_3">Categories</string>
    <string name="tab_text_2">Favorites</string>
    <string name="action_delete_category">Delete category</string>
    <string name="action_create_recipe">Create a recipe</string>
    <string name="action_create_category">Create a category</string>

    <!-- TODO: Remove or change this placeholder text -->

    <!-- TODO: Remove or change this placeholder text -->

    <!-- TODO: Remove or change this placeholder text -->

    <!-- TODO: Remove or change this placeholder text -->
</resources>
