<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.github.jnuutinen.cookbook.presentation.CreateRecipeActivity"
    tools:showIn="@layout/activity_create_recipe">

    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <android.support.constraint.ConstraintLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context="com.example.juha.recipeviewerproject.AddRecipeActivity">

            <EditText
                android:id="@+id/edit_name"
                android:hint="@string/recipe_name_hint"
                android:maxLength="40"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:inputType="textPersonName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/text_create_category"
                android:text="@string/recipe_category"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                app:layout_constraintTop_toBottomOf="@id/edit_name"
                app:layout_constraintStart_toStartOf="parent" />

            <Spinner
                android:id="@+id/spinner_category"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                app:layout_constraintTop_toBottomOf="@id/edit_name"
                app:layout_constraintStart_toEndOf="@id/text_create_category" />

            <TextView
                android:id="@+id/text_recipe_ingredients"
                android:text="@string/recipe_ingredients"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_create_category" />

            <TableLayout
                android:id="@+id/table_ingredients"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintTop_toBottomOf="@id/text_recipe_ingredients"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">
            </TableLayout>

            <TextView
                android:id="@+id/text_blanks"
                android:text="@string/recipe_blank"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textStyle="italic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintTop_toBottomOf="@id/table_ingredients"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <ImageButton
                android:id="@+id/button_add_ingredient"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="8dp"
                android:alpha="0.6"
                android:background="@drawable/ic_action_add_circle_outline"
                android:contentDescription="@string/contentdesc_add_ingredient"
                android:onClick="newRow"
                app:layout_constraintEnd_toStartOf="@+id/button_remove_ingredient"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_blanks"
                app:srcCompat="@drawable/ic_action_add_circle_outline" />

            <ImageButton
                android:id="@+id/button_remove_ingredient"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:alpha="0.6"
                android:background="@drawable/ic_action_remove_circle_outline"
                android:contentDescription="@string/contentdesc_remove_ingredient"
                android:onClick="removeRow"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/button_add_ingredient"
                app:layout_constraintTop_toTopOf="@id/button_add_ingredient"
                app:srcCompat="@drawable/ic_action_remove_circle_outline" />

            <TextView
                android:id="@+id/text_recipe_instructions"
                android:labelFor="@+id/editTextInstructions"
                android:text="@string/recipe_instructions"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                app:layout_constraintTop_toBottomOf="@id/button_add_ingredient"
                app:layout_constraintStart_toStartOf="parent" />

            <EditText
                android:id="@+id/edit_instructions"
                android:ems="10"
                android:inputType="textMultiLine"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintTop_toBottomOf="@id/text_recipe_instructions"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" />

        </android.support.constraint.ConstraintLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>
